添加问题页广告

--- a/src/main/resources/templates/admin/advertisement.html
+++ b/src/main/resources/templates/admin/advertisement.html
@@ -394,6 +394,7 @@
             <select class="form-control" id="position">
                 <option value="home page">主页</option>
                 <option value="publish page">发布页</option>
+                <option value="question page">问题页</option>
             </select>
         </div>
         <div class="container" style="height: 30px"></div>
