完善管广告系统

--- a/src/main/resources/templates/admin/advertisement.html
+++ b/src/main/resources/templates/admin/advertisement.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="/admin/advertisement">
-                        <i class="ni ni-bullet-list-67 text-red"></i> 广告设置
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告和新闻设置
                     </a>
                 </li>
             </ul>
@@ -395,6 +395,12 @@
                 <option value="home page">主页</option>
                 <option value="publish page">发布页</option>
                 <option value="question page">问题页</option>
+                <option value="class page">分类页</option>
+                <option value="user page">用户列表页</option>
+                <option value="user home">用户主页</option>
+                <option value="message">消息页</option>
+                <option value="search">搜索页</option>
+                <option value="news">新闻</option>
             </select>
         </div>
         <div class="container" style="height: 30px"></div>
