--- a/src/main/resources/templates/admin/controller.html
+++ b/src/main/resources/templates/admin/controller.html
@@ -113,6 +113,11 @@
                         <i class="ni ni-key-25 text-info"></i> 社区设置
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/advertisement">
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告和新闻设置
+                    </a>
+                </li>
             </ul>
             <!-- Divider -->
             <hr class="my-3">
