--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/admin/advertisement">
-                        <i class="ni ni-bullet-list-67 text-red"></i> 广告设置
+                        <i class="ni ni-bullet-list-67 text-red"></i> 广告和新闻设置
                     </a>
                 </li>
             </ul>
