--- a/src/main/resources/templates/admin/controller.html
+++ b/src/main/resources/templates/admin/controller.html
@@ -286,6 +286,9 @@
                         </div>
                         <!--                        日志下载-->
                         <div class="tab-pane fade" id="pills-log" role="tabpanel" aria-labelledby="pills-log-tab">
+                            <div class="container">
+                                <h5>注意：最新日志不可删除，只能查看下载，历史日志可以删除下载，但不能在线查看！</h5>
+                            </div>
                             <div class="table-responsive" id="classTable">
                                 <table class="table align-items-center table-flush">
                                     <thead class="thead-light">
@@ -307,16 +310,16 @@
                                         </td>
                                         <td>
                                             <span th:if="${log.getShow()}">
-                                                <a th:href="${'/admin/log/download/' + log.getUrl() + '?type=show'}">查看</a>
+                                                <a class="btn btn-primary btn-sm" target="_blank" th:href="${'/admin/log/download/' + log.getUrl() + '?type=show'}">查看</a>
                                             </span>
                                             <span th:if="${log.getShow()==false}"></span>
                                         </td>
 
                                         <td>
-                                            <a th:href="${'/admin/log/download/' + log.getUrl() + '?type=download'}"> <span>下载</span></a>
+                                            <a class="btn btn-success btn-sm" th:href="${'/admin/log/download/' + log.getUrl() + '?type=download'}"> <span>下载</span></a>
                                         </td>
                                         <td>
-                                           删除
+                                            <button type="button" class="btn btn-danger btn-sm" th:if="${log.getShow()==false}" th:data-title="${log.getTitle()}" onclick="setLogTitle(this)">删除</button>
                                         </td>
                                     </tr>
                                     </tbody>
@@ -364,7 +367,23 @@
 </div>
 <!-- Argon Scripts -->
 <!-- Core -->
-
+<div id="showSendDeleteLog"  style="width: 100%; height: 100%;position:fixed;bottom: 0px;background: rgba(0, 0, 0, 0.7);display: none">
+    <div class="container" style="height: 60px"></div>
+    <div class="container">
+        <input type="hidden" id="fileName" value="-1">
+        <div class="form-group">
+            <label style="color:white;" for="password">敏感操作，请输入密码验证：</label>
+            <input autocomplete="off" type="password" name="password" class="form-control" id="password"
+                   aria-describedby="timeHelp" placeholder="请输入密码">
+            <small id="passwordHelp" class="form-text text-muted"></small>
+        </div>
+        <div class="container" style="height: 30px"></div>
+        <p style="color: white" id="result"></p>
+        <div class="container" style="height: 30px"></div>
+        <button type="button"  class="btn btn-primary" onclick="sendDeleteLog()">提交</button>
+        <button type="button"  class="btn btn-secondary" onclick="closeDeleteLog()">取消</button>
+    </div>
+</div>
 <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Argon JS -->
 <script src="/assets/js/argon.js?v=1.0.0"></script>
