--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -32,7 +32,9 @@
                 <li class="nav-item active mx-2">
                     <a class="nav-link" href="/user" th:text="#{index.user}">用户<span class="sr-only">(current)</span></a>
                 </li>
-
+                <li class="nav-item active mx-2">
+                    <a class="nav-link" href="/chat">聊天<span class="sr-only">(current)</span></a>
+                </li>
 
                 <!-- 搜索 -->
                 <p class="form-inline my-2 my-lg-0 mx-2">
