添加聊天人数显示

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -42,7 +42,7 @@
     <div id="chat-page" class="hidden" th:if="${session.user != null}">
         <div class="chat-container">
             <div class="chat-header">
-                <h2>不挂高数社区聊天室</h2>
+                <h2>不挂高数社区聊天室 &nbsp;<span style="font-size: small">当前在线：<span id="onlineUserCount"></span>人</span></h2>
             </div>
             <div class="connecting">
                 连接中
