--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -54,7 +54,7 @@
                 <div class="form-group">
                     <div class="input-group clearfix">
                         <input type="text" id="message" placeholder="请输入聊天内容" autocomplete="off" class="form-control"/>
-                        <button type="submit" class="primary">Send</button>
+                        <button type="submit" class="primary">发送</button>
                     </div>
                 </div>
             </form>
