--- a/src/main/resources/templates/chatRules.html
+++ b/src/main/resources/templates/chatRules.html
@@ -69,7 +69,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-danger" role="alert">
         聊天注意事项：
     </div>
     <ul class="list-group">
