--- a/src/main/resources/templates/chatRules.html
+++ b/src/main/resources/templates/chatRules.html
@@ -59,12 +59,17 @@
 
 <div class="container" style="height: 30px">
 </div>
-<div class="container">
+<div class="container" >
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">聊天室</h1>
             <p class="lead">各位胸弟，聊一下吧，不要钱的 ~</p>
-            <a class="btn btn-primary btn-lg" href="/" role="button">离开</a>
+            <hr class="my-4">
+            <a class="btn btn-outline-primary btn-lg" href="/chatPage" role="button">
+                <img src="/image/icon/chat.svg" height="40px" alt="开始聊天" title="开始聊天">
+                &nbsp;
+                <span class="mt-2">开始聊天</span>
+            </a>
         </div>
     </div>
 </div>
@@ -74,7 +79,7 @@
     </div>
     <ul class="list-group">
         <li class="list-group-item">1.登陆后才能聊天。</li>
-        <li class="list-group-item">2.点击右下角图标进行聊天。</li>
+        <li class="list-group-item">2.点击上方按钮进行聊天。</li>
         <li class="list-group-item">3.本站不存储所有聊天信息，关闭聊天后消息立即失效。</li>
         <li class="list-group-item">4.请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。</li>
         <li class="list-group-item">5.因为不保存聊天消息，所以你只能看见你在进入聊天室后的这段时间里收到的消息。</li>
@@ -82,9 +87,9 @@
 </div>
 <div class="container" style="height: 30px">
 </div>
-<div id="backTop" class="text-right mr-5 mb-5" style="position:fixed; right: 20px; bottom: 10px;">
-    <a target="_blank" href="/chatPage"><img src="/image/icon/chat.svg" width="100px" alt="开始聊天" title="开始聊天"></a>
-</div>
+<!--<div id="go_to_chat" class="text-right mr-5 mb-5" style="position:fixed; right: 20px; bottom: 10px;">-->
+<!--    <a target="_blank" href="/chatPage"><img src="/image/icon/chat.svg" width="100px" alt="开始聊天" title="开始聊天"></a>-->
+<!--</div>-->
 
 <!-- 页脚 -->
 <div th:insert="~{footer :: footer}"></div>
