--- a/src/main/resources/templates/chatRules.html
+++ b/src/main/resources/templates/chatRules.html
@@ -65,7 +65,7 @@
             <h1 class="display-4">聊天室</h1>
             <p class="lead">各位胸弟，聊一下吧，不要钱的 ~</p>
             <hr class="my-4">
-            <a class="btn btn-outline-primary btn-lg" href="/chatPage" role="button">
+            <a target="_blank" class="btn btn-outline-primary btn-lg" href="/chatPage" role="button">
                 <img src="/image/icon/chat.svg" height="40px" alt="开始聊天" title="开始聊天">
                 &nbsp;
                 <span class="mt-2">开始聊天</span>
