--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -13,7 +13,7 @@
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-        / / background-image: url("https://api.isoyu.com/bing_images.php");
+            /*background-image: url("https://api.isoyu.com/bing_images.php");*/
             background-color: #efefef;
         }
 
@@ -22,13 +22,34 @@
             border-right-width: 1px;
             border-right-color: #efefef;
         }
-    </style>
-    <script type="text/javascript">
-        if(window.localStorage.getItem("closable") === "true") {
-            window.localStorage.removeItem("closable");
-            window.close();
+
+        a:hover {
+            text-decoration: none;
         }
-    </script>
+        .my-nav {
+            background-color: #efefef;
+            color: black;
+            border-radius: 10px;
+        }
+
+        .my-nav-active {
+            background: #494a4b;
+            color: white;
+        }
+        .my-nav:hover {
+            background-color:#494a4b;
+            color: white;
+        }
+        .hot-tag {
+            background-color: #99cfff;
+        }
+        .hot-tag:hover{
+            background-color: #23527c;
+        }
+        .hot-question {
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
 <!-- 标题栏 使用  fixed-top 将标题栏固定在顶部 -->
