--- a/src/main/resources/templates/searchUser.html
+++ b/src/main/resources/templates/searchUser.html
@@ -13,7 +13,7 @@
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-        / / background-image: url("https://api.isoyu.com/bing_images.php");
+            /*background-image: url("https://api.isoyu.com/bing_images.php");*/
             background-color: #efefef;
         }
 
@@ -22,13 +22,43 @@
             border-right-width: 1px;
             border-right-color: #efefef;
         }
-    </style>
-    <script type="text/javascript">
-        if (window.localStorage.getItem("closable") === "true") {
-            window.localStorage.removeItem("closable");
-            window.close();
+
+        a:hover {
+            text-decoration: none;
         }
-    </script>
+
+        .my-nav {
+            background-color: #efefef;
+            color: black;
+            border-radius: 10px;
+        }
+
+        .my-nav-active {
+            background: #494a4b;
+            color: white;
+        }
+
+        .my-nav:hover {
+            background-color: #494a4b;
+            color: white;
+        }
+
+        .hot-tag {
+            background-color: #99cfff;
+        }
+
+        .hot-tag:hover {
+            background-color: #23527c;
+        }
+
+        .hot-question {
+            padding: 5px;
+        }
+
+        <
+        /
+        style >
+    </style>
 </head>
 <body>
 <!-- 标题栏 使用  fixed-top 将标题栏固定在顶部 -->
@@ -82,7 +112,8 @@
                                             th:text="${user.getUserName()}">中间对齐
 
                         </a>
-                            <span class="ml-4" style="font-size: 15px">用户邮箱：<span th:text="${user.getEmail()}"></span></span>
+                            <span class="ml-4" style="font-size: 15px">用户邮箱：<span
+                                    th:text="${user.getEmail()}"></span></span>
                         </h5>
                         <p class="mb-1" th:text="${user.getSimpleSelfIntroduction()}"></p>
                         <p class="mb-1" th:text="${user.getSelfIntroduction()}">Cras sit amet nibh libero</p>
@@ -153,11 +184,13 @@
         <div class="col">
             <br/>
             <div id="Advertisement" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators" >
-                    <li th:each="ad : ${advertisements}" th:class="${adStat.index == 0} ? 'active' : ''" data-target="#Advertisement"  th:data-slide-to="${adStat.index}"></li>
+                <ol class="carousel-indicators">
+                    <li th:each="ad : ${advertisements}" th:class="${adStat.index == 0} ? 'active' : ''"
+                        data-target="#Advertisement" th:data-slide-to="${adStat.index}"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div th:each="ad : ${advertisements}" th:class="${adStat.index == 0} ? 'carousel-item active' : 'carousel-item'">
+                    <div th:each="ad : ${advertisements}"
+                         th:class="${adStat.index == 0} ? 'carousel-item active' : 'carousel-item'">
                         <a th:href="'/adUrl' + @{/(url=${ad.url},id=${ad.id})}" target="_blank">
                             <img class="d-block w-100" th:src="${ad.image}" th:alt="${ad.title}" th:title="${ad.title}">
                             <div class="carousel-caption d-none d-md-block mb-0" style="border-bottom: 0px">
@@ -196,9 +229,12 @@
             </h5>
             <div class="container mt-2" style="padding: 0px;">
                 <div class="list-group">
-                    <a th:each="hotQuestion : ${hotQuestions}" th:href="${'/question/' + hotQuestion.getQuestionId()}" class="list-group-item list-group-item-action hot-question">
-                        <span th:if="${hotQuestionStat.index < 3}" class="badge badge-danger" th:text="${hotQuestionStat.index+1}">Danger</span>
-                        <span th:if="${hotQuestionStat.index >= 3}" class="badge badge-secondary" th:text="${hotQuestionStat.index+1}">Danger</span>
+                    <a th:each="hotQuestion : ${hotQuestions}" th:href="${'/question/' + hotQuestion.getQuestionId()}"
+                       class="list-group-item list-group-item-action hot-question">
+                        <span th:if="${hotQuestionStat.index < 3}" class="badge badge-danger"
+                              th:text="${hotQuestionStat.index+1}">Danger</span>
+                        <span th:if="${hotQuestionStat.index >= 3}" class="badge badge-secondary"
+                              th:text="${hotQuestionStat.index+1}">Danger</span>
                         <span class="ml-2" th:text="${hotQuestion.title}"></span>
                     </a>
                 </div>
@@ -209,12 +245,14 @@
             <!-- 图片轮播 -->
             <div id="news-carousel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li th:each="n : ${news}" data-target="#news-carousel" th:data-slide-to="${nStat.index}" th:class="${nStat.index==0} ? 'active' : ''"></li>
+                    <li th:each="n : ${news}" data-target="#news-carousel" th:data-slide-to="${nStat.index}"
+                        th:class="${nStat.index==0} ? 'active' : ''"></li>
                 </ol>
                 <div class="carousel-inner">
-                    <div th:each="n : ${news}" th:class="${nStat.index == 0} ? 'carousel-item active' : 'carousel-item'">
+                    <div th:each="n : ${news}"
+                         th:class="${nStat.index == 0} ? 'carousel-item active' : 'carousel-item'">
                         <a th:href="'/adUrl' + @{/(url=${n.url},id=${n.id})}" target="_blank">
-                            <img class="d-block w-100" th:src="${n.image}" th:alt="${n.title}" th:title="${n.title}" >
+                            <img class="d-block w-100" th:src="${n.image}" th:alt="${n.title}" th:title="${n.title}">
                             <div class="carousel-caption d-none d-md-block mb-0" style="border-bottom: 0px">
                                 <p class="mb-0" th:text="${n.title}"></p>
                             </div>
