--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -132,7 +132,7 @@
             </div>
             <script type="text/javascript">
                 Vditor.preview(document.getElementById("question-markdown-view"), {
-                    emojiPath: '/js/vditor/dist/images/emoji'
+                    emojiPath: '/js/vditor/dist/images/emoji',
                 });
             </script>
             <hr/>
