--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -83,7 +83,7 @@
                                 </option>
                                 <option th:selected="${question.getClassification()=='提问'}" value="提问">提问</option>
                                 <option th:selected="${question.getClassification()=='讨论'}" value="讨论">讨论</option>
-                                <option th:selected="${question.getClassification()=='讨论'}" value="讨论">分享</option>
+                                <option th:selected="${question.getClassification()=='分享'}" value="分享">分享</option>
                                 <option th:selected="${question.getClassification()=='建议'}" value="建议">建议</option>
                                 <option th:selected="${question.getClassification()=='Bug'}" value="Bug">Bug</option>
                                 <option th:selected="${question.getClassification()=='灌水'}" value="灌水">灌水</option>
