--- a/src/main/resources/templates/class.html
+++ b/src/main/resources/templates/class.html
@@ -7,10 +7,11 @@
     <link rel="shortcut icon" th:href="@{/favicon.png}"/>
     <link rel="bookmark" th:href="@{/favicon.png}"/>
     <title th:text="#{index.title}">不挂高数社区</title>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css"/>
-    <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     <style type="text/css">
         body {
         / / background-image: url("https://api.isoyu.com/bing_images.php");
