--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -8,12 +8,11 @@
     <link rel="bookmark" th:href="@{/favicon.png}"/>
     <title th:text="#{index.writePost}">发布</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/editormd.min.css"/>
     <link href="/css/bootstrap-tagsinput.css" rel="stylesheet">
-    <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/js/vditor@1.9.0/dist/index.classic.css"/>
-    <script src="/js/vditor@1.9.0/dist/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vditor@3.4.5/dist/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vditor@3.4.5/dist/index.min.js"></script>
     <style type="text/css">
         body {
         / / background-image: url("https://api.isoyu.com/bing_images.php");
@@ -105,6 +104,7 @@
                 <small id="textHelp" class="form-text" style="color: red" th:text="${textMessage}"></small>
                 <script src="/js/vditor/emoji_map.js" type="text/javascript"></script>
                 <script src="/js/vditor.js" type="text/javascript"></script>
+
                 <input type="hidden" name="questionId" th:value="${question.getQuestionId()}">
                 <input type="hidden" name="createTime" th:value="${question.getCreateTime()}">
 
