--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,17 +8,13 @@
     <link rel="bookmark" href="/favicon.png"/>
     <title th:text="${question.title}">问题</title>
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/question.css">
-    <link rel="stylesheet" href="/css/editormd.preview.min.css"/>
-    <link rel="stylesheet" href="/css/editormd.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-    <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/js/vditor@1.9.0/dist/index.classic.css"/>
-    <script src="/js/vditor@1.9.0/dist/index.min.js"></script>
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vditor/dist/index.classic.css" />-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/vditor/dist/index.min.js"></script>-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vditor@3.4.5/dist/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vditor@3.4.5/dist/index.min.js"></script>
 
     <style type="text/css">
         ul li {
@@ -64,6 +60,30 @@
 
         .question-comment {
             border-bottom: solid 1px rgba(0, 0, 0, .1);
+        }
+        .vditor-outline__item {
+            border-left: 1px solid transparent;
+        }
+
+        .vditor-outline__item--current {
+            border-left: 1px solid #4285f4;
+            color: #4285f4;
+            background-color: #f6f8fa;
+        }
+
+        .vditor-outline__item:hover {
+            color: #4285f4;
+            background-color: #f6f8fa;
+        }
+
+        @media (max-width: 768px) {
+            #markdown-view-catalog {
+                display: none !important;
+            }
+
+            .wrapper--preview {
+                margin: 0;
+            }
         }
     </style>
 </head>
@@ -128,13 +148,11 @@
             <!-- 内容 -->
             <div class="container">
                 <!-- Server-side output Markdown text -->
-                <textarea id="question-markdown-view" class="vditor-reset" th:text="${question.description}" style="display:none"></textarea>
+                <textarea id="question-markdown-text" class="vditor-reset" th:text="${question.description}" style="display:none"></textarea>
+                <div id="question-markdown-view"></div>
             </div>
-            <script type="text/javascript">
-                Vditor.preview(document.getElementById("question-markdown-view"), {
-                    emojiPath: '/js/vditor/dist/images/emoji',
-                });
-            </script>
+
+
             <hr/>
 
             <!--标签-->
@@ -198,6 +216,7 @@
                         </a>
                         <div th:id="${'comment-show-' + comment.getCommentId()}" class="comment-show-md mt-2" style="padding-top: 20px; padding-bottom: 20px">
                             <textarea class="comment-show-text vditor-reset" style="display: none" th:text="${comment.getContent()}"></textarea>
+                            <div class="comment-show-view"></div>
                         </div>
 
                         <div class="row mt-2 mb-2">
@@ -354,8 +373,8 @@
                     <script src="/js/vditor/emoji_map.js" type="text/javascript"></script>
                     <script type="text/javascript">
                         const vditor = new Vditor('comment-text', {
-                            toolbar: ['emoji', 'headings', 'bold', 'italic', 'strike', '|', 'line', 'quote', 'list', 'ordered-list', 'check', 'code', 'inline-code', 'undo', 'redo', 'upload', 'link', 'table', 'record', 'both', 'preview', 'fullscreen'],
-                            typewriterMode: true,
+                            //toolbar: ['emoji', 'headings', 'bold', 'italic', 'strike', '|', 'line', 'quote', 'list', 'ordered-list', 'check', 'code', 'inline-code', 'undo', 'redo', 'upload', 'link', 'table', 'record', 'both', 'preview', 'fullscreen'],
+                            //typewriterMode: true,
                             placeholder: "请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。",
                             counter: 100000,
                             height: 400,
@@ -367,9 +386,11 @@
                             upload: {
                                 accept: 'image/*, .wav, .mp4, .zip, .rar, .7z, .docx, .dox, .ppt, .pptx, .xls, .xlsx, .pdf, .apk, .mp3, .txt',
                                 url: '/api/file/upload',
-                                linkToImgUrl: '/api/file/upload',
+                                // linkToImgUrl: '/api/file/upload',
                                 filename (name) {
-                                    return name;
+                                    return name.replace(/[^(a-zA-Z0-9\u4e00-\u9fa5\.)]/g, '')
+                                        .replace(/[\?\\/:|<>\*\[\]\(\)\$%\{\}@~]/g, '')
+                                        .replace('/\\s/g', '');
                                 },
                             }
                         });
@@ -411,6 +432,60 @@
 
                 </a>
             </div>
+            <hr/>
+            <h5>目录</h5>
+            <br>
+            <div id="catalogView"></div>
+            <script type="text/javascript">
+                const text = document.querySelector("#question-markdown-text").value
+                const questionView = document.querySelector("#question-markdown-view")
+                const catalogView = document.querySelector("#catalogView")
+                Vditor.preview(questionView, text, {
+                    anchor: 1,
+                    emojiPath: '/js/vditor/dist/images/emoji',
+                    after() {
+                        Vditor.outlineRender(questionView, catalogView)
+                         if (catalogView.innerText.trim() !== '') {
+                             catalogView.style.display = 'block'
+                            initOutline()
+                        }
+                    }
+                });
+
+                function initOutline() {
+                    const headingElements = []
+                    Array.from(document.querySelector("#question-markdown-view").children).forEach((item) => {
+                        if (item.tagName.length === 2 && item.tagName !== 'HR' && item.tagName.indexOf('H') === 0) {
+                            headingElements.push(item)
+                        }
+                    })
+
+                    let toc = []
+                    window.addEventListener('scroll', () => {
+                        const scrollTop = window.scrollY
+                        toc = []
+                        headingElements.forEach((item) => {
+                            toc.push({
+                                id: item.id,
+                                offsetTop: item.offsetTop
+                            })
+                        })
+
+                        const currentElement = document.querySelector('.vditor-outline__item--current')
+                        for (let i = 0, iMax = toc.length; i < iMax; i++) {
+                            if (scrollTop < toc[i].offsetTop - 30) {
+                                if (currentElement) {
+                                    currentElement.classList.remove('vditor-outline__item--current')
+                                }
+                                const index = i > 0 ? i - 1 : 0
+                                document.querySelector('div[data-id="' + toc[index].id + '"]').classList.add('vditor-outline__item--current')
+                                break
+                            }
+                        }
+                    })
+                }
+            </script>
+            <br/>
             <hr/>
             <br/>
             <h5>站长微信</h5>
@@ -476,10 +551,12 @@
 <div th:insert="~{footer :: footer}"></div>
 
 <script type="text/javascript">
-    var list = document.getElementsByClassName("comment-show-text");
+    const list = document.getElementsByClassName("comment-show-text");
+    const views = document.getElementsByClassName("comment-show-view");
     var length = list.length;
     for (var i = 0; i < length; i++) {
-        Vditor.preview(list[i], {
+        Vditor.preview(views[i], list[i].value, {
+            anchor: 0,
             emojiPath: "/js/vditor/dist/images/emoji"
         })
     }
