--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -197,7 +197,10 @@
     <button class="btn btn-lg btn-primary btn-block" type="button" th:text="#{index.signup}" onclick="signUp()">注册</button>
 
 
-    <p class="mt-5 mb-3 text-muted">&copy; 2019-2019</p>
+    <p class="mt-5 mb-3 text-muted">&copy; 2019-<span id="now-time"></span></p>
+    <script>
+        document.querySelector("#now-time").innerText = new Date().getFullYear()
+    </script>
 </form>
 
 <script src="/js/url.js" type="text/javascript"></script>
